# simple-cache

./: .gitignore  README.md
InMemoryCache/: CMakeLists.txt  CmakeLists.txt  InMemoryCache.sdf  InMemoryCache.sln
InMemoryCache/cache-server/: CMakeLists.txt  CmakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  EvictionStrategy.h  Main.cpp  OldestInsertionEviction.cpp  Server.cpp  Server.h  StorageProvider.cpp  StorageProvider.h  cache-server.vcxproj  cache-server.vcxproj.filters  connection.cpp  connection.h  main.cpp  server.cpp  server.h
InMemoryCache/test-client/: CMakeLists.txt  Main.cpp  test_client.vcxproj
InMemoryCache/test_client/: Main.cpp
